@@ -1,3 +1,8 @@
+2006-10-19  J. Tang  <jtang@tresys.com>
+
+	* added lib<foo>_get_version() functions to libqpol, libpoldiff,
+	and libsefs
+
 2006-10-17  J. Tang  <jtang@tresys.com>
 
 	* seaudit-report binary was mistakenly called "seaudit_report"
